--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,9 @@
     "@aws-sdk/client-s3": "^3.523.0",
     "@aws-sdk/s3-request-presigner": "^3.523.0",
     "@faker-js/faker": "8.3.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@google-analytics/data": "4.1.0",
     "@headlessui/react": "1.7.13",
     "@sendgrid/mail": "^8.1.3",
