--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@google-analytics/data": "4.1.0",
     "@headlessui/react": "1.7.13",
+    "@heroicons/react": "^2.1.3",
     "@sendgrid/mail": "^8.1.3",
+    "@sumsub/websdk": "^2.3.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "apexcharts": "^3.41.0",
