--- a/app/fly-client.toml
+++ b/app/fly-client.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for cryptotx-client on 2024-05-12T21:26:52+02:00
+# fly.toml app configuration file generated for borcashdemo-client on 2024-05-23T18:01:42+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'cryptotx-client'
+app = 'borcashdemo-client'
 primary_region = 'ams'
 
 [build]
