--- a/app/fly-server.toml
+++ b/app/fly-server.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for cryptotx-server on 2024-05-12T21:26:08+02:00
+# fly.toml app configuration file generated for borcashdemo-server on 2024-05-23T18:01:28+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'cryptotx-server'
+app = 'borcashdemo-server'
 primary_region = 'ams'
 
 [build]
