--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "@google-analytics/data": "4.1.0",
     "@headlessui/react": "1.7.13",
     "@heroicons/react": "^2.1.3",
+    "@json2csv/plainjs": "^7.0.6",
     "@sendgrid/mail": "^8.1.3",
     "@sumsub/websdk": "^2.3.0",
     "@tailwindcss/forms": "^0.5.3",
@@ -23,6 +24,7 @@
     "prettier-plugin-tailwindcss": "0.5.11",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-csv": "^2.2.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "4.11.0",
     "react-modal": "^3.16.1",
